손시연 클래스 파이썬 예제 완료

--- a/week2/lab_class-basics.ipynb
+++ b/week2/lab_class-basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
@@ -23,12 +23,65 @@
     "\n",
     "class Point():\n",
     "    # 아래 pass를 지우고 클래스를 설계하세요.\n",
-    "    pass"
+    "    def __init__(self, x, y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        # todo 1을 위한 코드= \n",
+    "        print(f\"Point initiated: ({self.x}, {self.y})\")\n",
+    "        ## 1이랑 2 둘 다 만족시킬 수 있는 방법을 못찾았어요. 아래는 todo2를 위한 코드입니다\n",
+    "        #print(f\" point info: x={self.x}, y={self.y} \")\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Point info: x={self.x}, y={self.y}\"\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return self.__str__()\n",
+    "    \n",
+    "    def __eq__(self, other):\n",
+    "        return True if self.x == other.x and self.y == other.y else False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# To Do 1 노트\n",
+    "__init__ 은 파이썬에서 클래스의 생성자 메소드. \n",
+    "생성자는 뭐고 메소드는 뭐냐. \n",
+    "\n",
+    "메소드는 클래스 안에 들어있는 함수. \n",
+    "생성자는 인스턴스가 만들어지는 순간 자동으로 호출되는 메소드. \n",
+    "\n",
+    "set 이랑 init의 차이\n",
+    "set은 필요할 때 수동으로 키는 함수고, 상태 변경이 목적이다. \n",
+    "반면 init은 생성될 때 자동으로 켜지며 기본 상태 보장을 목적으로 함. \n",
+    "init을 안 쓰면 객체가 불완전해짐. \n",
+    "\n",
+    "class Student:\n",
+    "    def set_name(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "s = Student()\n",
+    "s.set_name(\"시연\")\n",
+    "\n",
+    "-> 이때 set_name을 안 부르면 name이 없는 인스턴스. \n",
+    "\n",
+    "\n",
+    "class Student:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def set_name(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "s = Student(\"시연\")   # 무조건 name 있음\n",
+    "s.set_name(\"수정\")\n",
+    "-> 이때 student()만 하면 에러뜰 걸. 그래서 무조건 name을 추가하게 됨. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-01-06T03:42:50.894100Z",
@@ -39,7 +92,17 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point initiated: (1, 2)\n",
+      "Point initiated: (1, -1)\n",
+      "Point initiated: (1, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "To-Do 1: 아래 코드를 실행했을 때, 다음과 같이 순서대로 출력되어야 합니다.\n",
@@ -48,14 +111,18 @@
     "Point initiated: (1, -1)\n",
     "Point initiated: (1, 2)\n",
     "\"\"\"\n",
-    "point_1 = Point(x=1, y=2)\n",
+    "point_1 = Point(1, 2)\n",
     "point_2 = Point(x=1, y=-1)\n",
-    "point_3 = Point(x=1, y=2)"
+    "point_3 = Point(x=1, y=2)\n",
+    "\n",
+    "# print(f\"Point initiated: ({point_1.x}, {point_1.y})\")\n",
+    "# print(f\"Point initiated: ({point_2.x}, {point_2.y})\")\n",
+    "# print(f\"Point initiated: ({point_3.x}, {point_3.y})\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-01-06T03:42:50.918841Z",
@@ -66,7 +133,25 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point info: x=1, y=2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Point at 0x237f9950fa0>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "To-Do 2: 아래 코드를 실행했을 때, 아래와 같이 순서대로 출력되어야 합니다.\n",
@@ -80,8 +165,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# To Do 2 노트\n",
+    "# __str__ 메소드\n",
+    ": 이 객체를 사람이 읽을 문자열로 바꿔달라는 약속된 메소드\n",
+    "print(obj) 가 명령된 순간 자동으로 호출\n",
+    "\n",
+    "내장된 기능은 \n",
+    "text = obj.__str__()\n",
+    "print(text)\n",
+    "\n",
+    "str은 출력하는 메소드가 아니라 출력될 문자열을 돌려주는 메소드. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# __repr__ 메소드\n",
+    "\n",
+    "Jupyter Notebook에서 셀의 마지막 줄에 객체만 적으면 Jupyter는 내부적으로 repr(point_2)를 호출한다고 함. \n",
+    "\n",
+    "그렇다면 __repr__은 뭘까? \n",
+    ": 시스템용 객체 표현. 파이썬이 객체를 대표 문자열로 보여줄 때 사용한다. 뭔소리고? 기본 주소값(객체의 정체,,,?) 출력한다. <__main__.Point at 0x237f9950fa0> 이런 거. \n",
+    "\n",
+    "지금 그런데 문제에서 print(point_1) 뿐만 아니라 point_2라는 명령어도 point info: 가 뜨게 하라고 한다. 그러면 str 말고 repr도 정의해줘야 한다는 뜻. \n",
+    "\n",
+    "def __repr__(self):\n",
+    "    return self.__str__()\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point info: x=1, y=2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Point info: x=1, y=-1"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "To-Do 2 최종 버전: 아래 코드를 실행했을 때, 아래와 같이 순서대로 출력되어야 합니다.\n",
+    "\n",
+    "Point info: x=1, y=2\n",
+    "Point info: x=1, y=-1\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "print(point_1)\n",
+    "point_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-01-06T03:42:50.943410Z",
@@ -92,7 +246,15 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "To-Do 3: 아래 코드를 실행했을 때, 아래와 같이 출력되어야 합니다.\n",
@@ -101,6 +263,20 @@
     "\"\"\"\n",
     "is_equal_1 = point_1==point_3\n",
     "print(is_equal_1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# To Do 3 노트\n",
+    "\n",
+    "point_1==point_3\n",
+    "을 파이썬은 아래와 같이 실행한다\n",
+    "point_1.__eq__(point_3)\n",
+    "즉, == 연산자는 __eq__라는 메소드를 호출한다\n",
+    "\n",
+    "값을 보고 맞는지 확인하는 게 아니라 메모리 주소가 같은지를 비교하는 메소드. "
    ]
   }
  ],
@@ -129,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
